learnt using external apis, @value, @postconstruct